assets/css/styles.css
/* ... */
/*MEDIA QUERIES FOR XS SCREENS*/
@media only screen and (max-width: 375px) {

    /*RESPONSIVE HEADER STYLES FOR XS*/
    .headerbar__logo--mobile {
        width: 15rem;
    }

    .container--mobile {
        width: 95%;
    }

    .column-2__open--mobile {
        width: 100%;
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }

    .mobile--open {
        width: 2.5rem;
        height: 2.5rem;
    }

    .mobile--close {
        width: 2.5rem;
        height: 2.5rem;
    }

    .column-2__nav--mobile {
        padding: 0.5em;
        display: flex;
        align-items: center;
        width: 45vw;
        height: 100vh;
        background: var(--color-secondary);
        background: linear-gradient(43deg, var(--color-secondary) 0%, var(--color-primary) 95%);
        position: absolute;
        right: 0;
        top: 0;
        transition: 1s ease-in-out;
    }

    nav {
        width: 100%;
    }

    ul > a {
        width: 100%;
        justify-content: center;
        padding-top: 1em;
        padding-right: 0;
        color: white;
        display: flex;
    }

    .closed {
        width: 0;
        padding: 0;
    }

    .open {
        width: 45vw;
    }

    /*HERO SECTION STYLES FOR XS*/ 
    h1 {
        font-size: 2.5rem;
        margin-bottom: 1rem;
    }

    p {
        font-size: 1.3rem
    }

    h2 {
        font-size: 2rem;
    }

    h3 {
        font-size: 1.8rem;
    }

    .container-mobile {
        width: 87.5%;
        height: auto;
    }

    .column-2-mobile {
        width: 100%;
        text-align: center;
    }

    .column-2-mobile > img {
        width: 80%;
        margin-bottom: 3rem;
    }

    .flex-column-mobile {
        flex-direction: column-reverse;
        width: 100%;
    }

    .align-center-mobile {
        justify-content: center;
    }

    .flex-order {
        order: 1;
    }

    .flex-row-mobile {
        flex-direction: row;
    }

    .align-start-mobile {
        align-items: start;
    }

    

    /*ABOUT SECTION STYLES FOR XS*/
    .grid-container-mobile {
        place-items: center;
        width: 100%;
        padding: 3em 0em;
        grid-template-columns: repeat(1, 1fr);
        grid-template-rows: repeat(4, 1fr);
        grid-column-gap: 35px;
        grid-row-gap: 35px;
    }
    

    /*TESTIMONIAL SECTION STYLES FOR XS*/

    .testimonial-text {
        font-size: 1.3rem; 
    }

    .testimonial-card {
        margin-top: 3em;
    }

    .testimonial-card  img {
        width: 50%;
    }

    .testimonial-card p {
        padding-left: 0;
        padding-bottom: 0.5rem;
    }

    /*CONTACT SECTION STYLES FOR XS*/
    .form-wrapper {
        width: 100%;
    }

    .column-2__text {
        margin-bottom: 3em;
    }

    label {
        padding: 0;
    }

    /*FOOTER SECTION STYLES FOR XS*/

    .container-mobile--100 {
        width: 100%;
    }

    .hide {
        display: none;
    }

    .social {
        margin: 0 auto;
    }
    
}

